// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`github integration addUserToGitHubOrg 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "invitee_id": 123,
        "org": "myorg",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`github integration addUsersToGitHubOrg 1`] = `
[MockFunction] {
  "calls": [
    [
      "foo",
    ],
    [
      "bar",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`github integration getAuthenticatedOctokit 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "auth": {
          "appId": 123,
          "installationId": 123,
          "privateKey": "helloworld",
        },
        "authStrategy": [Function],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`github integration getGithubUsersFromGithub 1`] = `
Set {
  "chrisns",
  "bar",
  "foo",
  "pending",
  "anotherpending",
}
`;

exports[`github integration getUserIdFromUsername found 1`] = `123`;

exports[`github integration getUserIdFromUsername notfound 1`] = `"Unable to find user id for foo"`;

exports[`github integration removeUserFromGitHubOrg 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "org": "myorg",
        "username": "foo",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`github integration removeUsersFromGitHubOrg 1`] = `
[MockFunction] {
  "calls": [
    [
      "foo",
    ],
    [
      "bar",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
